--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
             </div>
         </div>
 
-        <img src="https://i.imgur.com/p0kdzwA.jpeg" style="border-radius: 0.75rem; box-shadow: var(--shadow-xl); margin: 3rem auto 0 auto; width: 100%; max-width: 42rem; object-fit: cover;" alt="Comiendo saludable" loading="lazy" decoding="async">
+        <img src="https://imgur.com/HqWKXZq" style="border-radius: 0.75rem; box-shadow: var(--shadow-xl); margin: 3rem auto 0 auto; width: 100%; max-width: 42rem; object-fit: cover;" alt="Comiendo saludable" loading="lazy" decoding="async">
     </section>
 
     <!-- 15. TESTIMONIALS -->
@@ -1116,7 +1116,7 @@
              "Si yo lo logré, tú también lo logras. ¡Vamos juntas!"
            </p>
 
-           <img src="https://i.imgur.com/p0kdzwA.jpeg" style="width: 100%; border-radius: 1rem; box-shadow: var(--shadow-xl); margin-top: 2rem; object-fit: cover;" alt="Beatriz" loading="lazy" decoding="async">
+           <img src="https://imgur.com/HqWKXZq" style="width: 100%; border-radius: 1rem; box-shadow: var(--shadow-xl); margin-top: 2rem; object-fit: cover;" alt="Beatriz" loading="lazy" decoding="async">
         </div>
     </section>
 
