--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Satisfy&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     
     <!-- Preload Hero Image -->
-    <link rel="preload" as="image" href="https://i.imgur.com/HqWKXZq.jpg" fetchpriority="high">
+    <link rel="preload" as="image" href="https://i.imgur.com/HqWKXZqm.jpg" fetchpriority="high">
 
     <style>
       /* --- 1. VARIABLES & RESET --- */
@@ -535,7 +535,7 @@
             <div class="relative w-full max-w-3xl" style="margin: 0 auto;">
                 <div class="hero-blob"></div>
                 <img 
-                    src="https://i.imgur.com/HqWKXZq.jpg" 
+                    src="https://i.imgur.com/HqWKXZqm.jpg" 
                     alt="Mujer cocinando saludable" 
                     class="hero-img"
                     width="800"
@@ -577,7 +577,7 @@
                     <span class="pain-badge badge-good">
                         POR ESTO
                     </span>
-                    <img src="https://i.imgur.com/wdiH0pu.jpg" alt="Comida rica" class="pain-img img-good" loading="lazy" decoding="async">
+                    <img src="https://i.imgur.com/wdiH0pum.jpg" alt="Comida rica" class="pain-img img-good" loading="lazy" decoding="async">
                     <p class="font-bold" style="margin-top: 1rem; color: #1f2937;">Recetas sabrosas y nutritivas</p>
                 </div>
             </div>
@@ -596,7 +596,7 @@
         </h2>
 
         <div class="max-w-4xl flex justify-center" style="margin: 0 auto 3rem auto;">
-            <img src="https://i.imgur.com/KCEgc1g.jpg" alt="Historia" style="border-radius: 1rem; box-shadow: var(--shadow-lg); width: 100%; max-width: 28rem; height: auto; object-fit: contain;" loading="lazy" decoding="async">
+            <img src="https://i.imgur.com/KCEgc1gm.jpg" alt="Historia" style="border-radius: 1rem; box-shadow: var(--shadow-lg); width: 100%; max-width: 28rem; height: auto; object-fit: contain;" loading="lazy" decoding="async">
         </div>
 
         <div class="quote-box">
@@ -618,7 +618,7 @@
         </div>
 
         <div class="grid grid-cols-2 md-grid-cols-4 gap-4" style="max-width: 64rem; margin: 0 auto 3rem auto;">
-            <img src="https://i.imgur.com/dTKy0ue.jpg" class="module-grid-img" alt="Plato delicioso" loading="lazy" decoding="async">
+            <img src="https://i.imgur.com/dTKy0uem.jpg" class="module-grid-img" alt="Plato delicioso" loading="lazy" decoding="async">
             <img src="https://i.imgur.com/NKFdhly.jpg" class="module-grid-img" alt="Plato delicioso" loading="lazy" decoding="async">
             <img src="https://i.imgur.com/YHV5eIo.jpg" class="module-grid-img" alt="Plato delicioso" loading="lazy" decoding="async">
             <img src="https://i.imgur.com/jj6gYPM.jpg" class="module-grid-img" alt="Plato delicioso" loading="lazy" decoding="async">
@@ -637,7 +637,7 @@
         <p class="text-gray max-w-2xl" style="margin: 0 auto 2.5rem auto;">
             Son más de 200 recetas saludables para que nunca más pienses que hacer dieta es aburrido. Descubre el placer de comer bien sin culpa.
         </p>
-        <img src="https://i.imgur.com/isLVoX2.jpg" alt="Variedad de platos" class="promise-img" style="width: 20rem; height: 20rem;" loading="lazy" decoding="async">
+        <img src="https://i.imgur.com/isLVoX2m.jpg" alt="Variedad de platos" class="promise-img" style="width: 20rem; height: 20rem;" loading="lazy" decoding="async">
     </section>
 
     <!-- 6. HOW IT WORKS -->
